--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,7 +11,6 @@
   </head>
 
   <body>
-    <img src="/assets/logo_small.png"/>
     <div id='mount'></div>
   </body>
 
@@ -19,6 +18,6 @@
 
   <!-- dist/bundle.js will be created by Webpack -->
   <script type="text/javascript"
-          src="/dist/bundle.js">
+          src="dist/bundle.js">
   </script>
 </html>
