Load sass.js via script

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Color Scheme Generator</title>
     <link rel="stylesheet" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/93930/highlight-github.css">
+    <script src='sass.sync.js'></script>
     <!--<link rel="stylesheet" href="lib/foundation.min.css">-->
 
   </head>
